# bazel-visibility-tool

./: .bazelignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  repositories.bzl
bazel/: BUILD.bazel  defs.bzl
visibility-tool-cli/: BUILD.bazel
visibility-tool-cli/src/bazel/java/com/google/idea/blaze/base/model/primitives/: Label.java  StringUtil.java  TargetExpression.java  TargetName.java  WildcardTargetPattern.java  WorkspacePath.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/cli/: AnalyzePackagesCommand.java  BaseAnalyzeVisibilityCommand.java  GenerateDotFileCommand.java  GenerateGroupVisibilityMatrixCommand.java  GenerateMarkdownMermaidCommand.java  GenerateMembershipFilesCommand.java  QueryVisibilityGroupsCommand.java  VisibilityGraphBuilder.java  VisibilityToolCli.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/cli/mavendeps/: GenerateMavenDepsAllowList.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/cli/picocli/: TargetExpressionConverter.java  WorkspacePathConverter.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/definition/: BaseVisibilityQueryTool.java  MavenDepsVisibilityInfo.java  MavenDepsVisibilityInfoQueryTool.java  PackageGroup.java  StringListVariablesBazelFile.java  VisibilityAllowlistBazelFile.java  VisibilityGroup.java  VisibilityGroupInfoQueryTool.java  VisibilityPackageInfo.java  VisibilityPackageInfoQueryTool.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/deps_tool_ext/: MavenDepsVisibilityAnalyzer.java  VisibilityToolProvider.java  VisibilityToolProviderFactor.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/query/: BazelQueryCommand.java  BazelQueryForLabelsCommand.java  BazelQueryForPackagesCommand.java  BazelQueryForTargetProtoCommand.java  BazelRuleWithAttributes.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/util/: SystemUtil.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/util/bazel/: BazelBinary.java  BazelBinaryFinder.java  BazelCommand.java  BazelCommandExecutor.java  BazelCommandExecutorWithProgress.java  BazelVersion.java  DefaultBazelCommandExecutor.java  ProcessStreamsProvider.java  ProgressMonitorStreamsProvider.java
visibility-tool-cli/src/main/java/com/salesforce/tools/visibility/util/shell/: MacOsLoginShellFinder.java  ShellUtil.java  UnixLoginShellFinder.java
visibility-tool-cli/src/test/java/com/salesforce/tools/visibility/cli/: VisibilityGroupInfoLoaderTest.java
visibility-tool-cli/src/test/java/com/salesforce/tools/visibility/deps_tool_ext/: MavenDepsVisibilityAnalyzerTest.java
visibility-tool-cli/src/test/java/com/salesforce/tools/visibility/it/: VisibilityToolIntegrationTest.java
visibility-tool-cli/src/test/workspace/: .gitignore  .p4ignore  BUILD.bazel  MODULE.bazel  WORKSPACE
visibility-tool-cli/src/test/workspace/backend/apis/foo/: BUILD.bazel
visibility-tool-cli/src/test/workspace/backend/internal/foo/tests/: BUILD.bazel
